Enhancement: Output result Accuracy 100% achieved.